# wallets

./: .dockerignore  .env.example  .gitignore  .pylintrc  Makefile  README.md  boilerplate-nginx.conf  entrypoint.sh  nginx.Dockerfile  pyproject.toml  pytest.ini  requirements.txt  wallet-nginx.conf
.github/workflows/: tests.yaml  tests.yml
alembic/: env.py
alembic/versions/: 2025_07_10_1147-0eb9d6350285_add_wallet_table.py
compose/: app-dev.yaml  app.yaml  nginx.yaml  postgres.yaml
compose/dockerfiles/: app.Dockerfile  nginx.Dockerfile
src/: config.py  database.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/example_app/: __init__.py  router.py
src/dependencies/: __init__.py
src/dependencies/wallet/: __init__.py  dependencies.py
src/models/: __init__.py
src/models/example_app/: models.py
src/models/wallets/: __init__.py  models.py
src/repositories/: __init__.py  base_repository.py
src/repositories/example_app/: repositories.py
src/repositories/wallets/: __init__.py  wallet_repository.py
src/schemas/: __init__.py
src/schemas/wallet/: __init__.py  operation.py  wallet.py
src/services/: __init__.py  base_service.py
src/services/example_app/: services.py
src/services/wallets/: __init__.py  services.py
src/usecases/: __init__.py
src/usecases/wallets/: __init__.py  usecases.py
src/utils/: __init__.py  base_model.py  base_repository.py  base_service.py  base_usecase.py  decorators.py
tests/: conftest.py
tests/test_wallets/: test_repositories.py  test_routes.py  test_services.py  test_usecases.py
(+3 files in other folders)
